Z-index fixes

--- a/QWC2Components/components/style/Search.css
+++ b/QWC2Components/components/style/Search.css
@@ -121,7 +121,6 @@
 
 #Search ul.search-results {
     top: 100%;
-    z-index: 8;
     position: absolute;
     background-color: rgba(255,255, 255, 0.85);
     max-height: 40em;
