--- a/QWC2Components/plugins/style/TopBar.css
+++ b/QWC2Components/plugins/style/TopBar.css
@@ -7,7 +7,7 @@
     color: @panel_fg@;
     background-color: @panel_bg@;
     box-shadow: 0px 2px 4px rgba(136, 136, 136, 0.5);
-    z-index: 6;
+    z-index: 8;
     display: flex;
     align-items: center;
 }
